--- a/SB-Foods/client/src/styles/Home.css
+++ b/SB-Foods/client/src/styles/Home.css
@@ -13,19 +13,19 @@
     text-align: center;
     width: 210px;
     height: fit-content;
-    border-radius: 1.5rem;
     cursor: pointer;
     padding: 15px;
 }
 .home-category-card:hover{
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 2px, rgba(17, 17, 26, 0.05) 0px 8px 2px;
+    opacity: 0.9;
 }
 
 .home-category-card img{
 
     width: 180px;
     height: 180px;
-    border-radius: 50%;
+    border-radius: 1rem;
     border: 1px solid #c6c4c4;
 
 }
@@ -33,7 +33,12 @@
 
 .home-category-card h5{
 
-    padding-top: 5px;
+    padding-top: 15px;
     color: #4c4747;
 }
 
+.restaurants-body h3{
+    margin-left: 41% ;
+    color: rgb(83, 53, 6);
+    font-weight: bolder;
+}
