--- a/SB-Foods/client/src/styles/Navbar.css
+++ b/SB-Foods/client/src/styles/Navbar.css
@@ -1,31 +1,32 @@
 .navbar{
     height: 12vh;
-    background-color: #ffffff;
+    background-color: #f0eaea;
     display: flex;
     align-items: center;
     position: fixed;
+    justify-content: space-around;
     top: 0;
     width: 100%;
     z-index: 999;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 16px 24px;
 }
 
-.navbar h3{
-
-    margin: 0;
-    color: rgb(54, 147, 194);
-    font-weight: bold;
-    margin-left: 3vw;
-    cursor: pointer;
+.logo{
+    width: 5rem;
+    border-radius: 50%;
+    margin-left: 2rem;
+    object-fit: cover;
 }
+
 
 .nav-content{
 
     display: flex;
     width: 70%;
     align-items: center;
-    justify-content: end;
+    justify-content: space-between;
     gap: 20px;
+    margin-bottom: 0.75rem;
 }
 
 .nav-search{
@@ -33,6 +34,7 @@
     width: 70%;
     display: flex;
     align-items: center;
+    margin-bottom: 1rem;
 }
 
 .nav-search input{
@@ -40,7 +42,7 @@
     outline: none;
     padding: 10px 10px;
     border-radius: 0.5rem;
-    border: 1px solid #477b9142;
+    border: 1px solid rgb(83, 53, 6);
     font-size: 0.9rem;
     position: relative;
     left: 2rem;
@@ -53,7 +55,7 @@
 }
 
 .nav-search-icon{
-    font-size: 2rem; 
+    font-size: 1.5rem; 
     position: relative;
     left: -0.5rem; 
     cursor: pointer;
@@ -78,19 +80,20 @@
 
 .nav-content button{
 
-    margin: 0 30px 0 0;
+    margin: 0 30px 1rem 0;
     padding: 0;
-    border: 1px solid rgb(111, 152, 188);
-    color: rgb(122, 160, 194);
+    border: 1px solid rgb(83, 53, 6);
+    color: rgb(83, 53, 6);
     padding: 3px 20px 5px 20px;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     font-weight: 600;
+    background-color: white;
 }
 .nav-content button:hover{
 
-    border: 1px solid rgba(109, 138, 163, 0.317);
+    border: 1px solid rgba(52, 32, 0, 0.707);
     color: rgb(255, 255, 255);
-    background-color: rgba(45, 123, 192, 0.701);
+    background-color: rgb(83, 53, 6);
 
 }
 
