--- a/SB-Foods/client/src/styles/Restaurants.css
+++ b/SB-Foods/client/src/styles/Restaurants.css
@@ -99,7 +99,8 @@
 
 .restaurant .restaurant-data h6{
 
-    margin: 0;
+    margin-top: 1rem;
+    font-weight: 800;
 }
 
 .restaurant .restaurant-data p{
